--- a/main/templates/main/user/register.html
+++ b/main/templates/main/user/register.html
@@ -6,18 +6,7 @@
 <h1>Registration</h1>
 <form action="" method="POST">
     {% csrf_token %}
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required><br>
-
-    <label for="email">Email:</label>
-    <input type="email" id="email" name="email" required><br>
-
-    <label for="password1">Password:</label>
-    <input type="password" id="password1" name="password1" required><br>
-
-    <label for="password2">Confirm Password:</label>
-    <input type="password" id="password2" name="password2" required><br>
-
+{{form.as_p}}
     <input type="submit" value="Register">
 </form>
 {% endblock %}
